# burningbar

./: .gitignore  .travis.yml  BurningBar.hs  Entities.swift  HsRPCGen.hs  INSTALL.md  JSON→Swift.hs  Language.hs  Parse.hs  README.md  Service.hs  Swift.hs  Tests.hs  Translate.hs  Unicode.hs  burningbar  burningbar.cabal  burningbar.hs  gm.spec  hsrpcgen  hsrpcgen.sh  makefile  runburningbar  spec.bb  spec.burnbar  spec.json
TestGen/: Entities.swift  Interface.swift  TestGen.swift  burningbar
TestGen.xcworkspace/: contents.xcworkspacedata
TestGen.xcworkspace/xcshareddata/: TestGen.xccheckout
TestGen/TestGen/: TestGen.h  YourProto.swift
TestGen/TestGen.playground/: Contents.swift
TestGen/TestGen.xcodeproj/: project.pbxproj
TestGen/TestGen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TestGen/TestGen.xcodeproj/project.xcworkspace/xcshareddata/: TestGen.xccheckout
TestGen/TestGen.xcodeproj/xcuserdata/Cfr.xcuserdatad/xcschemes/: TestGen.xcscheme  xcschememanagement.plist
Tests/: Main.hs  doctests.hs
src/: BurningBar.hs  BurningBard.hs  Checker.hs  Language.hs  Parse.hs  Service.hs  Static.hs  Swift.hs  Util.hs
test/: Common.hs  doctests.hs  lint.hs
tests/: Common.hs  doctests.hs
xcode/: burningbar
xcode/TestGen/: Entities.swift  Interface.swift
xcode/TestGen.xcworkspace/xcshareddata/: TestGen.xccheckout
xcode/TestGen/TestGen/: TestGen.plist  YourProto.swift
xcode/TestGen/TestGen.playground/: Contents.swift
xcode/TestGen/TestGen.playground/Sources/: SupportCode.swift
xcode/TestGen/TestGen.xcodeproj/: project.pbxproj
