name:               burningbar
version:            0.5.13
synopsis:           Swift RPC generator
homepage:           http://j.mp/burnbar
license:            PublicDomain
license-file:       UNLICENSE
author:             Stan Serebryakov
maintainer:         i+cabal@cfr.pw
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

source-repository head
  type:             git
  location:         https://github.com/cfr/burningbar.git

executable burningbar
  main-is:          BurningBar.hs
  other-modules:    Unicode, Language, Parse, Swift
  other-extensions: ScopedTypeVariables, UnicodeSyntax, CPP, RecordWildCards,
                    ViewPatterns, NoImplicitPrelude
  build-depends:    base, directory, filepath
  hs-source-dirs:   src
  default-language: Haskell2010

executable burningbard
  main-is:          Service.hs
  other-modules:    Unicode, Language, Parse, Swift, Paths_burningbar
  build-depends:    base, http-server, directory, filepath, url,
                    utf8-string, split
  hs-source-dirs:   src
  default-language: Haskell2010

Test-Suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Unicode, Language, Parse, Swift
  build-depends:    base, filepath, directory,
                    HUnit, QuickCheck, test-framework,
                    test-framework-hunit, test-framework-quickcheck
  hs-source-dirs:   src tests
  default-language: Haskell2010

test-suite doctests
  build-depends:    base, doctest >=0.8, process
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  buildable:        True
  hs-source-dirs:   src tests
  ghc-options:      -threaded
  default-language: Haskell2010


