name:               burningbar
version:            0.5.14
synopsis:           Swift RPC generator
homepage:           http://j.mp/burnbar
license:            PublicDomain
license-file:       UNLICENSE
author:             Stan Serebryakov
maintainer:         i+cabal@cfr.pw
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

source-repository head
  type:             git
  location:         https://github.com/cfr/burningbar.git

executable burningbar
  main-is:          BurningBar.hs
  other-modules:    Util, Language, Parse, Swift
  other-extensions: ScopedTypeVariables, UnicodeSyntax, CPP, RecordWildCards,
                    ViewPatterns, NoImplicitPrelude
  build-depends:    base, directory, filepath
  hs-source-dirs:   src
  default-language: Haskell2010

executable burningbard
  main-is:          BurningBard.hs
  other-modules:    Service, Util, Language, Parse, Swift, Paths_burningbar
  build-depends:    base, http-server, directory, filepath, url,
                    utf8-string, split
  hs-source-dirs:   src
  default-language: Haskell2010

Test-Suite test
  type:             exitcode-stdio-1.0
  main-is:          Common.hs
  other-modules:    Util, Language, Parse, Swift, Service
  build-depends:    base, filepath, directory, http-server, utf8-string,
                    HUnit, QuickCheck, test-framework, url, split,
                    test-framework-hunit, test-framework-quickcheck
  hs-source-dirs:   src test
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:    base, doctest, process, http-server,
                    directory, filepath, url,
                    utf8-string, split
  hs-source-dirs:   src test
  default-language: Haskell2010

test-suite lint
  type:             exitcode-stdio-1.0
  main-is:          lint.hs
  build-depends:    base, hlint
  hs-source-dirs:   test
  default-language: Haskell2010

