name:               burningbar
version:            0.6.6-α
synopsis:           Swift RPC generator
description:
    Tool and service to generate Swift JSON mappers and RPC functions.
    <https://github.com/cfr/burningbar/blob/master/README.md README>.
homepage:           http://j.mp/burnbar
bug-reports:        https://github.com/cfr/burningbar/issues
license:            PublicDomain
license-file:       UNLICENSE
author:             Stan Serebryakov
maintainer:         i+cabal@cfr.pw
stability:          experimental
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

source-repository head
  type:             git
  location:         https://github.com/cfr/burningbar.git

executable burningbar
  main-is:          BurningBar.hs
  other-modules:    Util, Language, Parse, Swift, Static, Checker
  other-extensions: ScopedTypeVariables, UnicodeSyntax, CPP, RecordWildCards,
                    ViewPatterns, NoImplicitPrelude
  build-depends:    base <5, directory, filepath, process
  hs-source-dirs:   src
  default-language: Haskell2010

executable burningbard
  main-is:          BurningBard.hs
  other-modules:    Service, Util, Language, Parse, Swift, Static, Checker, Paths_burningbar
  build-depends:    base <5, http-server, directory, filepath, url,
                    utf8-string, split
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Common.hs
  other-modules:    Util, Language, Parse, Swift, Static, Checker, Service
  build-depends:    base <5, filepath, directory, http-server, utf8-string,
                    HUnit, QuickCheck, test-framework, url, split,
                    test-framework-hunit, test-framework-quickcheck
  hs-source-dirs:   src test
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:    base <5, doctest, process, http-server,
                    directory, filepath, url, utf8-string, split
  hs-source-dirs:   src test
  default-language: Haskell2010

